[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sheratan-evolution"
version = "1.0.0"
description = "Sheratan Evolution Modular Core"
requires-python = ">=3.9"
dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "jsonschema"
]
